Applies minor code style and doc-string changes. Frequencies are now formatted as numbers in the storage file.